Fixes #4874 - Body of emails is squashed (e.g. with Ebay correspondences).

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -12781,7 +12781,6 @@ output {
 
   table {
     table-layout: auto;
-    display: block;
     width: 100%;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
